# desyncmeasure

./: Cargo.toml  README.md
examples/: genchirps.rs
scripts/: desyncplot  ffdesync  genvideo.sh
src/: chirps.rs  lib.rs  main.rs
