[package]
name = "desyncmeasure"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
#argh = "0.1.5"
#bardecoder = "0.2.2"
env_logger = {version = "0.9.0", default_features=false }
flume = "0.10.9"
gumdrop = "0.8.0"
itertools = "0.10.1"
#image = "0.22"
log = "0.4.14"
mkv = "0.0.8"
num-complex = "0.4.0"
ordered-float = "2.7.0"
rustfft = { version = "6.0.1", default-features = false }
zbar-rust = "0.0.18"

[dev-dependencies]
wav = "1.0.0"
